--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.1.3
+Date: 2019-12-30
+  Bugfixes:
+    - Fix changelog
+---------------------------------------------------------------------------------------------------
 Version: 1.1.2
 Date: 2019-12-30
   Bugfixes:
@@ -25,4 +30,5 @@ Date: 2019-12-26
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.0
 Date: 2019-12-25
-  - First release
+  Features:
+    - First release
