--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,9 @@
 ---------------------------------------------------------------------------------------------------
+Version: 1.1.4
+Date: 2019-12-30
+  Bugfixes:
+    - Fix bug when determining icons for alternative recipe
+---------------------------------------------------------------------------------------------------
 Version: 1.1.3
 Date: 2019-12-30
   Bugfixes:
